reimplementation/adl2/crates/adl-syntax/tests/snapshots/snapshots__golden_inf_constant.snap
---
source: crates/adl-syntax/tests/snapshots.rs
expression: "snapshot_for(\"legacy_parser/tests/golden/inf_constant.adl\")"
---
File
  Object kw=object name=MET @1:1
    Take kw=take src=MissingET @2:3
  Object kw=object name=eles @4:1
    Take kw=take src=Ele @5:3
  Region kw=region name=SR_a @7:1
    Cut kw=select @8:3
      Cmp op=>
        Binary op=+
          Dot field=pT
            Ident MET
          Dot field=pT
            Index 0
              Ident eles
        Binary op=/
          Num 100
          Num 0
  Region kw=region name=SR_b @10:1
    Cut kw=select @11:3
      Cmp op=>
        Dot field=pT
          Ident MET
        Num 50
---- diagnostics ----
