reimplementation/adl2/crates/adl-syntax/tests/snapshots/snapshots__golden_or_met.snap
---
source: crates/adl-syntax/tests/snapshots.rs
expression: "snapshot_for(\"legacy_parser/tests/golden/or_met.adl\")"
---
File
  Object kw=object name=MET @1:1
    Take kw=take src=MissingET @2:3
  Region kw=region name=SR_lo @4:1
    Cut kw=select @5:3
      Cmp op=<
        Dot field=pT
          Ident MET
        Num 100
  Region kw=region name=SR_hi_or_lo @7:1
    Cut kw=select @8:3
      Binary op=or
        Cmp op=>
          Dot field=pT
            Ident MET
          Num 200
        Cmp op=<
          Dot field=pT
            Ident MET
          Num 50
---- diagnostics ----
