reimplementation/adl2/crates/adl-syntax/tests/snapshots/snapshots__golden_quant_empty_forall.snap
---
source: crates/adl-syntax/tests/snapshots.rs
expression: "snapshot_for(\"legacy_parser/tests/golden/quant_empty_forall.adl\")"
---
File
  Object kw=object name=jets @1:1
    Take kw=take src=Jet @2:3
  Region kw=region name=SR_nojets @4:1
    Cut kw=select @5:3
      Cmp op===
        Call name=size
          Ident jets
        Num 0
  Region kw=region name=SR_hardjets @7:1
    Cut kw=select @8:3
      Cmp op=>
        Call name=pT
          Ident jets
        Num 100
---- diagnostics ----
