reimplementation/adl2/crates/adl-syntax/tests/snapshots/snapshots__golden_reject_and_band.snap
---
source: crates/adl-syntax/tests/snapshots.rs
expression: "snapshot_for(\"legacy_parser/tests/golden/reject_and_band.adl\")"
---
File
  Object kw=object name=MET @1:1
    Take kw=take src=MissingET @2:3
  Region kw=region name=SR_band @4:1
    Reject @5:3
      Binary op=and
        Cmp op=>
          Dot field=pT
            Ident MET
          Num 100
        Cmp op=<
          Dot field=pT
            Ident MET
          Num 200
  Region kw=region name=SR_mid @7:1
    Cut kw=select @8:3
      Cmp op=>
        Dot field=pT
          Ident MET
        Num 120
    Cut kw=select @9:3
      Cmp op=<
        Dot field=pT
          Ident MET
        Num 180
---- diagnostics ----
