reimplementation/adl2/crates/adl-syntax/tests/snapshots/snapshots__golden_size_bjets.snap
---
source: crates/adl-syntax/tests/snapshots.rs
expression: "snapshot_for(\"legacy_parser/tests/golden/size_bjets.adl\")"
---
File
  Object kw=object name=jets @1:1
    Take kw=take src=Jet @2:3
    Cut kw=select @3:3
      Cmp op=>
        Ident pT
        Num 30
  Object kw=object name=bjets @5:1
    Take kw=take src=jets @6:3
    Cut kw=select @7:3
      Cmp op===
        Ident BTag
        Num 1
  Region kw=region name=SR_ge2 @9:1
    Cut kw=select @10:3
      Cmp op=>=
        Call name=size
          Ident bjets
        Num 2
  Region kw=region name=SR_ge4 @12:1
    Cut kw=select @13:3
      Cmp op=>=
        Call name=size
          Ident bjets
        Num 4
---- diagnostics ----
