reimplementation/adl2/crates/adl-syntax/tests/snapshots/snapshots__golden_union_size.snap
---
source: crates/adl-syntax/tests/snapshots.rs
expression: "snapshot_for(\"legacy_parser/tests/golden/union_size.adl\")"
---
File
  Object kw=object name=eles @1:1
    Take kw=take src=Ele @2:3
  Object kw=object name=muons @4:1
    Take kw=take src=Muo @5:3
  Object kw=object name=leptons @7:1
    Take kw=take src=union(eles,muons) @8:3
  Region kw=region name=SR_a @10:1
    Cut kw=select @11:3
      Cmp op=>=
        Call name=size
          Ident leptons
        Num 2
    Cut kw=select @12:3
      Cmp op===
        Call name=size
          Ident eles
        Num 1
    Cut kw=select @13:3
      Cmp op===
        Call name=size
          Ident muons
        Num 1
  Region kw=region name=SR_b @15:1
    Cut kw=select @16:3
      Cmp op===
        Call name=size
          Ident eles
        Num 1
    Cut kw=select @17:3
      Cmp op===
        Call name=size
          Ident muons
        Num 1
    Cut kw=select @18:3
      Cmp op=>=
        Call name=size
          Ident leptons
        Num 2
---- diagnostics ----
